# safetensors-loader-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  main.cpp  safetensors_cpp
include/: mmap_file.h  safetensors_loader.h
